@@ -98,6 +98,11 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
     Jira: http://issues.apache.org/jira/browse/TS-319
     +1: bcall, zwoop, sjiang
 
+  * cleanup: Backport part of TS-322 that deals with indexing arrays with char.
+    Patch: Attached to ticket TS-334
+    Jira: https://issues.apache.org/jira/browse/TS-334
+    +1: bcall, zwoop, georgep
+
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
@@ -110,11 +115,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
     Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=930004
     Jira: https://issues.apache.org/jira/browse/TS-162
     +1: bcall, zwoop
-
-  * cleanup: Backport part of TS-322 that deals with indexing arrays with char.
-    Patch: Attached to ticket TS-334
-    Jira: https://issues.apache.org/jira/browse/TS-334
-    +1: bcall, zwoop, georgep
 
   * build: Problems with make install DESTDIR=...
     Trunk patch: http://svn.apache.org/viewvc?rev=941910&view=rev
