@@ -2,7 +2,8 @@
 
 Changes with Apache Traffic Server 2.0.1
 
-  *) Improvements to build system (TS-336) and portability (TS-334).
+  *) Backport part of TS-322 that deals with indexing arrays with char
+   (author: Marcus Ruckert) [TS-334].
 
 
 Changes with Apache Traffic Server 2.0.0
